# UnixRichPresence

./: Cargo.toml
src/: main.rs  stats.rs
