[package]
name = "UnixRichPresence"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discord-sdk = "0.3.0"
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
nix = "0.25.0"
sysinfo = "0.26.7"
byte-unit = "4.0.17"
once_cell = "1.16.0"
rand = "0.8.5"